# Qt.py

./: .gitignore  .hound.yml  .project  .pydevproject  .travis.yml  BINDINGS_INFO.md  CAVEATS.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  Dockerfile-build-py2.7  Dockerfile-build-py3.4  Dockerfile-build-py3.6  Dockerfile-install-py2.7  Dockerfile-py2.7  Dockerfile-py3.4  Dockerfile-py3.5  Dockerfile.py3  Dockerfile.vfxplatform2017  Dockerfile.vfxplatform2018  Dockerfile.vfxplatform2018-update1  Dockerfile.vfxplatform2018dev  LICENSE  LINKS.md  Qt.py  QtLegacy.py  Qt_convert_enum.py  README.md  appveyor.yml  build_caveats.py  build_caveats_tests.py  build_docker.sh  build_examples.py  build_md_tests.py  build_membership.py  build_membership.sh  build_membership_tests.py  caveats.py  entrypoint.sh  losTest.py  (+13 more)
.docker/: Dockerfile-py3.5  install_cmake3.sh  install_pyqt5.sh  install_pyside2.sh
.github/actions/setup-tox/: action.yml
.github/workflows/: pyside6.yml  release-to-pypi.yml  run-tests.yaml  run-tests.yml  run-tox.yml
Qt/: QtMultimedia.pyi  QtXml.pyi  __init__.py
Qt-stubs/: Qt.pyi  QtBluetooth.pyi  QtCompat.pyi  QtCore.pyi  QtDesigner.pyi  QtMultimediaWidgets.pyi  QtNfc.pyi  QtOpenGL.pyi  QtPositioning.pyi  QtPrintSupport.pyi  QtQml.pyi  QtQuick.pyi  QtSensors.pyi  QtSql.pyi  QtWebEngineCore.pyi  QtWebKit.pyi  QtWebKitWidgets.pyi  QtWebSockets.pyi  QtX11Extras.pyi  __init__.pyi
Qt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docker/: Dockerfile  docker-compose.yml
docker/etc/supervisor/: supervisord.conf
examples/: README.md  load_ui_base_instance.py  load_ui_base_instance_pysideuic.py  load_ui_qwidget.ui  ui_load.md
examples/QtSiteConfig/: QtSiteConfig.py  README.md  main.py
examples/QtSiteConfig_platforms/: QtSiteConfig.py  README.md  main.py
examples/loadUi/: README.md  baseinstance1.py  baseinstance2.py
examples/load_ui/: README.md  baseinstance1.py  baseinstance2.py  load_ui_1.py  load_ui_2.py  qwidget.ui
examples/siteConfig/: README.md
examples/site_members/: Qt_site_config.py
src/: Qt.py  Qt_convert_enum.py
src/Qt-stubs/: QtBluetooth.pyi  QtCompat.pyi  QtDBus.pyi  QtDesigner.pyi  QtHelp.pyi  QtLocation.pyi  QtMultimedia.pyi  QtMultimediaWidgets.pyi  QtNfc.pyi  QtOpenGL.pyi  QtPositioning.pyi  QtPrintSupport.pyi  QtQml.pyi  QtQuick.pyi  QtQuickWidgets.pyi  QtSensors.pyi  QtSerialPort.pyi  QtSql.pyi  QtTest.pyi  QtWebChannel.pyi  QtWebEngineCore.pyi  QtWebEngineWidgets.pyi  QtWebKit.pyi  QtWebKitWidgets.pyi  QtWebSockets.pyi  QtX11Extras.pyi  QtXml.pyi  QtXmlPatterns.pyi  __init__.pyi
