[build-system]
# Supports python 3.7 building
requires = ["setuptools <= 68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Qt.py"
description = """\
    Python compatibility wrapper around Qt5 and Qt6 bindings - \
    PySide2, PySide6, PyQt5 and PyQt6.\
"""
authors = [{name = "Marcus Ottosson", email = "konstruktion@gmail.com"}]
dependencies = ["types-PySide2"]
dynamic = ["version"]
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    # "Programming Language :: Python :: 3.12",
    # "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "tox>=4,<5"
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/mottosso/Qt"
Source = "https://github.com/mottosso/Qt"
Repository = "https://github.com/mottosso/Qt"
Issues = "https://github.com/mottosso/Qt.py/issues"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.dynamic]
# Use ast parser to pull version from its source in Qt.py
version = {attr = "Qt.__version__"}

[tool.setuptools.package-data]
"*" = ["*.pyi", "py.typed"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    "*.egg-info",
    "*.pyc",
    ".bzr",
    ".cache",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pycache__",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "docs",
    "node_modules",
    "shared-venv",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4
target-version = "py37"

[tool.ruff.lint]
select = ["B", "C", "E", "F", "N", "W", "B9"]
ignore = [
    "C901",
    "E203",
    "E501",
    "E722",
    "N802",
    "N803",
    "N806",
    "N999",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
# The .pyi files use wildcard imports to get the PySide6 typedef stubs. That is
# only allowed for those files.
"src/Qt-stubs/*.pyi" = [
    "F403",
]
